examples/test/testpolicy4396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4396
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key9: value40
      key33: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value27
          key9: value26
      podSelector:
        matchLabels:
          key6: value27
          key16: value47
          key35: value17
